--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "clean-webpack-plugin": "^2.0.1",
     "css-loader": "^2.1.1",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "image-webpack-loader": "^4.6.0",
     "mini-css-extract-plugin": "^0.6.0",
     "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
